--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div class="slide skinny">
           <h2>Designer (noun)</h2>
           <ul>
-            <li>one who creation solutions to problems</li>
-            <li>one who implements solutions to problems</li>
-            <li>one who makes things</li>
+            <li>Creates solutions to problems</li>
+            <li>Implements solutions to problems</li>
+            <li>Makes things</li>
           </ul>
         </div>
 
