--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div class="slide skinny">
           <h2>Designer (noun)</h2>
           <ul>
-            <li>Creates solutions to problems</li>
-            <li>Implements solutions to problems</li>
-            <li>Makes things</li>
+            <li>Creates solutions for problems</li>
+            <li>Implements solutions for problems</li>
+            <li>Makes shit</li>
           </ul>
         </div>
 
@@ -69,7 +69,7 @@
         </div>
 
         <div class="slide">
-          <h2 class="timelineTitle">Startup #1</h2>
+          <h2 class="timelineTitle">Startup #1 (Habit)</h2>
           <ol class="timelineList animate">
             <li><i class="fa fa-lightbulb-o"></i> <span>Idea</span></li>
             <li><i class="fa fa-comments-o"></i> <span>Argument</span></li>
@@ -82,7 +82,7 @@
         </div>
 
         <div class="slide">
-          <h2 class="timelineTitle">Startup #2</h2>
+          <h2 class="timelineTitle">Startup #2 (Lyst)</h2>
           <ol class="timelineList animate">
             <li><i class="fa fa-lightbulb-o"></i> <span>Idea</span></li>
             <li><i class="fa fa-pencil"></i> <span>Sketches</span></li>
@@ -115,7 +115,7 @@
 
         <div class="slide title">
           <header>
-            <h1>Create tools that help your process</h1>
+            <h1>Create tools that support your process</h1>
           </header>
         </div>
 
